<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#374140"
    android:backgroundTint="#374140"
    tools:context=".activities.TimerActivity">

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="89dp"
        android:background="#2A2C2B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/taskText"
        android:layout_width="312dp"
        android:layout_height="71dp"
        android:gravity="center"
        android:text="@string/task_swipe"
        android:textColor="#BDC3C7"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/hourText"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:gravity="clip_horizontal|center"
        android:inputType="numberSigned"
        android:maxLength="2"
        android:selectAllOnFocus="true"
        android:text="@string/timer_default"
        android:textColor="#FFFFFF"
        android:textSize="58sp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265" />

    <EditText
        android:id="@+id/minuteText"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="clip_horizontal|center"
        android:inputType="numberSigned"
        android:maxLength="2"
        android:selectAllOnFocus="true"
        android:text="@string/timer_default"
        android:textColor="#FFFFFF"
        android:textSize="58sp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toStartOf="@+id/secondsText"
        app:layout_constraintStart_toEndOf="@+id/hourText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265" />

    <EditText
        android:id="@+id/secondsText"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:gravity="clip_horizontal|center"
        android:inputType="numberSigned"
        android:maxLength="2"
        android:selectAllOnFocus="true"
        android:text="@string/timer_default"
        android:textColor="#FFFFFF"
        android:textSize="58sp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265" />

    <TextView
        android:id="@+id/timerColon1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_colon"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toStartOf="@+id/minuteText"
        app:layout_constraintStart_toEndOf="@+id/hourText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.274" />

    <TextView
        android:id="@+id/timerColon2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_colon"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toStartOf="@+id/secondsText"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@+id/minuteText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="@color/bg_mainactivity"
        android:dropDownSelector="@color/bg_mainactivity"
        android:foregroundTint="@color/bg_mainactivity"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/minuteText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/round_button"
        android:foregroundTintMode="add"
        android:text="@string/button_start"
        android:textColor="#FFFFFF"
        android:textColorHint="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minuteText" />

    <Button
        android:id="@+id/pauseButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/round_button"
        android:text="@string/button_pause"
        android:textColor="#FFFFFF"
        app:iconTint="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minuteText"
        app:layout_constraintVertical_bias="0.835"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/round_button_red"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/button_reset"
        android:textColor="#FFFFFF"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.871"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minuteText"
        app:layout_constraintVertical_bias="0.835"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>